almost done with liukiu :sweat:

--- a/localization/english/deities/deities_unaric_l_english.yml
+++ b/localization/english/deities/deities_unaric_l_english.yml
@@ -46,3 +46,7 @@
  deity_usagiyaa:0 "$omen_usagiyaa$"
  omen_usagiyaa:0 "Usagiyaa"
  omen_usagiyaa_desc:0 "The Usagiyaa were a class of divinely oriented people, however, unlike other such religious classes, the Usagiyaa had no true link to the divine. They still play a very important role in the religious society. This is the treatment of the mystical ailment 'Kami-Daari.' Kami-Daari is a sign that a Yuta woman is receving their calling. However, in the short term, this means ailments as minor as a loss of appetite, and as major as vomitting blood. She is to meet with either an Usagiyaa, or higher classes of spiritual people, to confirm if she is truly experiencing Kami-Daari. Once confirmed, the woman will begin her ascent to becoming a Yuta. If she never meets with an Usagiyaa or equivalent, however, both she and her family will be plagued with curses until she goes mad."
+
+ deity_ikiryo:0 "$omen_ikiryo$"
+ omen_ikiryo:0 "Ikiryo"
+ omen_ikiryo_desc:0 "The Duuchuu were adamant believers in the negative-spirits, which roughly means ghosts. Ghosts can be many things, notably, Mabui-Utushi; Mabui-Utushi roughly means lost soul. Ikiryo are commonly understood to be 'living ghosts,' causing frights and terrors, typically requiring the use of a #E Yuta#! to expel."
