--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -639,31 +639,31 @@ l_english:
  jomon_duuchuu_missions_task_8_DESC:0 "The #E Formosian Sea#! is both home to the #E Yizhou#!, as well as our own #E Southern Liukiu#! islands. We have had contact with them for centuries, and many aspects of their culture and faith have affected our southern islands. It is time we unify with them more intimately, directly controlling the island of #E Formosia#!. \n\n\n\n\n\n\n\n\n\n@china_mil2!"
  
  jomon_duuchuu_missions_task_9:0 "Permanent Pinghu Presence"
- jomon_duuchuu_missions_task_9_DESC:0 "The island of #E Pinghu#! is positioned in such a way that it would be perfect as a trading colony. Let us develop the land and prepare it to become a city."
+ jomon_duuchuu_missions_task_9_DESC:0 "The island of #E Pinghu#! is positioned in such a way that it would be perfect as a trading colony. Let us develop the land and prepare it to become a city. \n\n\n\n\n\n\n\n\n\n@india_mil7!"
  
  jomon_duuchuu_missions_task_10:0 "A New Anaro"
- jomon_duuchuu_missions_task_10_DESC:0 "The island of #E Anaro#! is positioned in such a way that it would be perfect as a trading colony. Let us develop the land and prepare it to become a city."
+ jomon_duuchuu_missions_task_10_DESC:0 "The island of #E Anaro#! is positioned in such a way that it would be perfect as a trading colony. Let us develop the land and prepare it to become a city. \n\n\n\n\n\n\n\n\n\n@india_mil7!"
  
  jomon_duuchuu_missions_task_11:0 "Ichor of the Igorot"
- jomon_duuchuu_missions_task_11_DESC:0 "We know very little about the #E Igorot#!, other than that they seem related to the #E Yizhou#! somehow. Regardless, their islands seem perfect for our growing kingdom. We simply MUST conquer them for ourselves, even at the cost of blood."
+ jomon_duuchuu_missions_task_11_DESC:0 "We know very little about the #E Igorot#!, other than that they seem related to the #E Yizhou#! somehow. Regardless, their islands seem perfect for our growing kingdom. We simply MUST conquer them for ourselves, even at the cost of blood. \n\n\n\n\n\n\n\n\n\n@china_mil7!"
  
  jomon_duuchuu_missions_task_12:0 "Azure Shores of Zhuya"
- jomon_duuchuu_missions_task_12_DESC:0 ""
+ jomon_duuchuu_missions_task_12_DESC:0 "The shores of #E Zhuya#! are quite distant, but colonizating them would allow us a base in the region of #E Jiao#!. Furthermore, the island has the precious resource of #Y Pearls#!. Their beauty captures our eyes, let us colonize #E Zhuya#! soon! \n\n\n\n\n\n\n\n\n\n@china_mil3!"
  
  jomon_duuchuu_missions_task_13:0 "Forward Colonization"
  jomon_duuchuu_missions_task_13_DESC:0 "The people of #Y [GetProvince('(int32)9740').GetName]#! are our flesh and blood, yet they lay much closer to the #E Kumaso#! people of the mainland. It would be rather aggressive to claim this as our own, but we do have a legitimate claim to the island. \n\n\n\n\n\n\n\n\n\n@greek_mil4!"
  
  jomon_duuchuu_missions_task_14:0 "Conquest of Kumaso"
- jomon_duuchuu_missions_task_14_DESC:0 ""
+ jomon_duuchuu_missions_task_14_DESC:0 "The #E Kumaso#! are a trade partner we have only had for a short while, yet they have already had a great impact on us. Taking over them directly will only further complicate our relationship with them. We will also be brought headfirst into the conflicts for the main islands of #E Wa#!. Hopefully we need not go too far. \n\n\n\n\n\n\n\n\n\n@egypt_por2!"
  
  jomon_duuchuu_missions_task_15:0 "Matter of Matsura"
- jomon_duuchuu_missions_task_15_DESC:0 ""
+ jomon_duuchuu_missions_task_15_DESC:0 "The #E Kumaso#! of #Y Matsura#! are less familiar to us than those in #Y Kumaso#!. They are further, yet they all live on the same island, bringing them into our sphere of influence. We must move from ships to land in order to conquer the whole of the #Y Kumaso Island#!. \n\n\n\n\n\n\n\n\n\n@persia_mil8!"
  
  jomon_duuchuu_missions_task_16:0 "The Ghost of Tsushima"
- jomon_duuchuu_missions_task_16_DESC:0 ""
+ jomon_duuchuu_missions_task_16_DESC:0 "Rumors of a ghost in #Y Tsushima#! from the old #E Kodo#! gods of the island have begun to arise. According to our #E Yuta#!, we must raise the funds in order to build a shrine to appease the spirits. \n\n\n\n\n\n\n\n\n\n@italic_mil27!"
  
  jomon_duuchuu_missions_task_17:0 "Terrify the Tamna"
- jomon_duuchuu_missions_task_17_DESC:0 ""
+ jomon_duuchuu_missions_task_17_DESC:0 "The use of scare tactics is not above us. In order to take over the strategically important island of #E Tamna#!, we will terrify its populace. And if they still do not submit, we will simply declare war, striking them down, and bringing them into the fold. \n\n\n\n\n\n\n\n\n\n@egypt_mil22!"
  
  jomon_duuchuu_missions_task_18:0 "Oki for Okinawa"
  jomon_duuchuu_missions_task_18_DESC:0 ""
@@ -675,7 +675,7 @@ l_english:
  jomon_duuchuu_missions_task_20_DESC:0 ""
 
  jomon_duuchuu_missions_task_21:0 "Purchase Changcheng"
- jomon_duuchuu_missions_task_21_DESC:0 ""
+ jomon_duuchuu_missions_task_21_DESC:0 "The port of #E Changcheng#! lies in the territory of the #E Yan Chinese#! people. Despite their long distance from our islands, we have a history of trading with them. We should be able to fetch a good price! \n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
  jomon_duuchuu_missions_task_22:0 "A Pirate's Life for Me?"
  jomon_duuchuu_missions_task_22_DESC:0 "The seas around us have always been invested with #E Pirates#!. With our new military focus, we should consider the possibility of adopting a #E Piratical Monarchy#! government. \n\n\n\n\n\n\n\n\n\n@persia_mil3!"
@@ -710,6 +710,10 @@ l_english:
  duuchuu_yoink_tt:0 "Our #E Navy#! has #Y 30#! or more ships and has a #E Comander#!."
  okinawa_disaster_tt:0 "#R If what the #Y Nuruu#! says is true, we will experience the following:#!"
  yuta_1_tt:0 "We will hear the proposal of the #Y Yuta Spirit-Medium#!."
+ decide_matsura_tt:0 "We will decide what to do with the area of #Y Matsura#!."
+ ghost_deity_tt:0 "We unlock a ghastly deity, #Y Ikiryo#!."
+ haunted_tt:0 "We may become #R haunted#! by a ghost!"
+ haunted_tt_2:0 "We will remove any ghost #R hauntings#!."
  
  
  #Modifiers
@@ -723,6 +727,9 @@ l_english:
  cultural_familiarity_yaemama:0 "Cultural Familiarity"
  duuchuu_colony:0 "Liukiu Trade Colony"
  ichor_of_igorot:0 "Ichor of the Igorot"
+ conquerers_of_kumaso:0 "Conqueror of Kumaso"
+ conquerers_of_matsura:0 "Conqueror of Matsura"
+ ghost_in_tsushima:0 "Haunted by Ghosts"
  
  #Others
  shell_bracelet:0 "Silver Shell Bracelet"
@@ -812,8 +819,8 @@ l_english:
  me_duuchuu_11_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_11$#!' has now been #G Completed#!!"
  
  me_duuchuu_12_title:0 "$jomon_duuchuu_missions_task_12$"
- me_duuchuu_12_desc:0 ""
- me_duuchuu_12.a:0 ""
+ me_duuchuu_12_desc:0 "Far from our homelands lay the island of #E Zhuya#!. On one bank we see an azure shine... it was the water reflecting off the most beautiful pearl we have ever seen. With a colony established on the island, we should colonize the rest as soon as we can to take advantage of the potential profits we can make from the pearl trade."
+ me_duuchuu_12.a:0 "That pearly white glint has my eyes entranced..."
  me_duuchuu_12_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_12$#!' has now been #G Completed#!!"
 
  me_duuchuu_130_desc:0 "Unfortunately, we were beaten to the island of #E Osumi#! by the #E Yayoi#!... however, because we've been such a consistent trade partner, the owner of #E Osumi#! are willing to part with it for a price! We've fashionned an especially pretty seashell bracelet worth a lot to the #E Yayoi#!. In exchange, we will be given the island."
@@ -825,18 +832,18 @@ l_english:
  me_duuchuu_13_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_13$#!' has now been #G Completed#!!"
  
  me_duuchuu_14_title:0 "$jomon_duuchuu_missions_task_14$"
- me_duuchuu_14_desc:0 ""
- me_duuchuu_14.a:0 ""
+ me_duuchuu_14_desc:0 "The people of the #E Kumaso#! area are well known to us. We have traded with them for years. Now we rule over them. The change is a strange, yet addicting feeling. This is a taste of power, of influence, and of greatness. We have established a foothold in #E Wa#!, only #E Amamichuu#! knows where this will bring us."
+ me_duuchuu_14.a:0 "The future seems bright."
  me_duuchuu_14_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_14$#!' has now been #G Completed#!!"
  
  me_duuchuu_15_title:0 "$jomon_duuchuu_missions_task_15$"
- me_duuchuu_15_desc:0 ""
- me_duuchuu_15.a:0 ""
+ me_duuchuu_15_desc:0 "The #E Matsura#! area is home to even more #E Kumaso#! people. The entire island of #E Kumaso#! lies under our control now. The might of the #E Liukiu#! people is unrivaled in the seas now. By #E Shinerichuu's#! grace we will continue to excel... however we have recieved a horrifying report from the #E Yuta#!. They tell us of a #E Ghost in Tsushima#!. This is entirely unexpected, and until we deal with this ghost, we may be cursed!"
+ me_duuchuu_15.a:0 "We must address this curse immediately."
  me_duuchuu_15_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_15$#!' has now been #G Completed#!!"
  
  me_duuchuu_16_title:0 "$jomon_duuchuu_missions_task_16$"
- me_duuchuu_16_desc:0 ""
- me_duuchuu_16.a:0 ""
+ me_duuchuu_16_desc:0 "Fearfully, a shrine to the #E Ikiryo#! has been built in #E Tsushima#!. Suddenly, the eery feeling of being haunted has been lifted from the skies above #E Uchinaa#!. The #E Yuta#! were right, the curse has been lifted."
+ me_duuchuu_16.a:0 "Finally! That was scary..."
  me_duuchuu_16_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_16$#!' has now been #G Completed#!!"
  
  me_duuchuu_17_title:0 "$jomon_duuchuu_missions_task_17$"
@@ -860,8 +867,8 @@ l_english:
  me_duuchuu_20_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_20$#!' has now been #G Completed#!!"
  
  me_duuchuu_21_title:0 "$jomon_duuchuu_missions_task_21$"
- me_duuchuu_21_desc:0 ""
- me_duuchuu_21.a:0 ""
+ me_duuchuu_21_desc:0 "The deal to purchase the #E Yan#! port of #E Changcheng#! has been made! Although it is merely a settlement, we have the opportunity to make this into an important city and a center of trade. We were only able to get such a good price because of our many years of trading with the #E Yan#! people."
+ me_duuchuu_21.a:0 "What a great deal!"
  me_duuchuu_21_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_21$#!' has now been #G Completed#!!"
 
  me_duuchuu_22_title:0 "$jomon_duuchuu_missions_task_22$"
