--- a/localization/english/deities/deities_natic_l_english.yml
+++ b/localization/english/deities/deities_natic_l_english.yml
@@ -54,6 +54,11 @@
  omen_irrawaddy:0 "Irrawaddy Nat"
  omen_irrawaddy_desc:0 "Irrawaddy Nat, the Nat of the great Irrawaddy river. The Irrawaddy is powerful, it is the largest river of the region and fills the valley with Nat and life."
 
+ deity_kingdom_nat:0 "$omen_kingdom_nat$"
+ omen_kingdom_nat:0 "Nikem Nat"
+ omen_kingdom_nat_desc:0 "Nikem Nat, the Nat of Kingdom and Empire that protects borders and lusts after war, has revealed himself to the people."
+
+
 #Pu group
  deity_kujii:0 "$omen_kujii$"
  omen_kujii:0 "Kuji'i Nat"
