--- a/localization/english/missions/fugandulu_missions_l_english.yml
+++ b/localization/english/missions/fugandulu_missions_l_english.yml
@@ -7,7 +7,7 @@
 
 #Missions
 
-01_fugandulu_task_1: "Politics Of The Province Of Pyu"
+01_fugandulu_task_1: "Politics Of Beikthano"
 01_fugandulu_task_1_DESC: "The floodplains near [GetProvince('(int32)8771').GetName] continue northward, passing the marshes of [GetProvince('(int32)8770').GetName] and extending into a fertile region where grain is plentiful but guarded by hostile Pyu warriors. [ROOT.GetCountry.GetRuler.GetName] desires this land for [ROOT.GetCountry.GetName] and has prepared our claims. \n\n\n\n\n\n\n\n\n\n@india_mil19!"
 fugandulu_1_ally_tt: "We need to have at least #Y 1#! ally and/or subject."
 
@@ -28,10 +28,9 @@ kujii_omen_active_tt: "Fugandulu has the #Y Kuji'i Nat Omen#! #T Active#!."
 01_fugandulu_task_6: "Farming Fugandulu"
 01_fugandulu_task_6_DESC: "For many years, [GetProvince('(int32)8778').GetName] was the only city of the #E Pyu#! tribesmen, but this is no more - the mighty [ROOT.GetCountry.GetRuler.GetName] has set the industrious people of [ROOT.GetCountry.GetName] to work. The time has come to plant and harvest, for our growing armies have need of supplies.\n\n\n\n\n\n\n\n\n\n@celt_mil14!"
 fugandulu_needs_two_farms_tt: "#Y We need at least#! #T 2 Farms#! #Y within our country.#!"
-fugandulu_has_bureaucracy_war_tt: "#Y We need the#! #G Indian Kingdoms Military Tradition#! #T The Bureaucracy of War#!." 
 
-01_fugandulu_task_7: "Gold Mines Of #E Binnaka#!"
-01_fugandulu_task_7_DESC: "There is gold and silver to be found on the plains of [GetProvince('(int32)8773').GetName], and the tribesmen of [ROOT.GetCountry.GetName] have need for it all. Once we have our mining operations up and running, we will begin to mint coins immediately.\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
+01_fugandulu_task_7: "Gemstones Of #E Binnaka#!"
+01_fugandulu_task_7_DESC: "There are precious stones to be found on the plains of [GetProvince('(int32)8773').GetName], and the tribesmen of [ROOT.GetCountry.GetName] have need for it all. Once we have our mining operations up and running, we will begin to mint coins immediately.\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
 01_fugandulu_task_8: "Master Of Puppets"
 01_fugandulu_task_8_DESC: "Not only is [ROOT.GetCountry.GetRuler.GetName] the undisputed authority of all [ROOT.GetCountry.GetName], but the commands of our [ROOT.GetCountry.GetRulerTitle] are even obeyed by foreign Tribal Chiefs.\n\n\n\n\n\n\n\n\n\n@india_mil22!"
@@ -41,11 +40,11 @@ fugandulu_2_ally_tt: "We need to have at least #Y 2#! subjects."
 01_fugandulu_task_9_DESC: "Our brave infantry and archers have brought countless victories to the people of [ROOT.GetCountry.GetName], and it is time that our levies are rewarded for their hard work. Let us spend the money to equip them properly.\n\n\n\n\n\n\n\n\n\n@india_mil6!"
 fugandulu_iron_arrows_tt: "#Y We must have a surplus of at least#! #T 2 Iron @iron!#! #Y and#! #T 2 Leather @leather!#! #Y in#! #T Sri Ksetra#!."
 
-01_fugandulu_task_10: "Settling Shan"
+01_fugandulu_task_10: "A Home In Halin"
 01_fugandulu_task_10_DESC: "Once we have conquered the tribes that have settled in the south of the province, we will be able to settle our kinsmen in the northern provinces without having to worry about their safety.\n\n\n\n\n\n\n\n\n\n@india_mil14!"
 
 01_fugandulu_task_11: "Guarding The Golden Road"
-01_fugandulu_task_11_DESC: "In one of the most visible signs of the growing centralization within [ROOT.GetCountry.GetName], the [ROOT.GetCountry.GetRulerTitle] [ROOT.GetCountry.GetRuler.GetName] has commanded that a road be built between the port of [GetProvince('(int32)8769').GetName] and the province of [GetProvince('(int32)8771').GetName]. The [ROOT.GetCountry.GetName] tribes have need of easy access to the Sea, but the marshlands of [GetProvince('(int32)8770').GetName] are not enough to deter invaders - we shall require a fortress. \n\n\n\n\n\n\n\n\n\n@italic_mil27!"
+01_fugandulu_task_11_DESC: "In one of the most visible signs of the growing centralization within [ROOT.GetCountry.GetName], the [ROOT.GetCountry.GetRulerTitle] [ROOT.GetCountry.GetRuler.GetName] has commanded that a road be built between the port of [GetProvince('(int32)9783').GetName] and the province of [GetProvince('(int32)9789').GetName]. The [ROOT.GetCountry.GetName] tribes have need of easy access to the Sea, but the marshlands of [GetProvince('(int32)9788').GetName] are not enough to deter invaders - we shall require a fortress. \n\n\n\n\n\n\n\n\n\n@italic_mil27!"
 
 01_fugandulu_task_12: "From The Fields Of Glory"
 01_fugandulu_task_12_DESC: "Not only have we brought various tribes under the banner of [ROOT.GetCountry.GetName], but [ROOT.GetCountry.GetRuler.GetName] has also managed to spread the veneration of the #Y Nats#! all throughout the region of #T Burma#!. We have marched from the fields of glory to conquer all that we have seen!\n\n\n\n\n\n\n\n\n\n@india_mil23!"
@@ -65,12 +64,12 @@ fugandulu_fifty_percent_natic_tt: "#Y In the region of#! #G Burma#!, #Y at least
 01_fugandulu_task_16: "Indian Trade Routes"
 01_fugandulu_task_16_DESC: "The #E Irrawaddy Valley#! grows fruits that are exceedingly rare, like the rambutan and banana, and our friends across the Sea are very interested in importing our produce.\n\nLet us do what we can to encourage our connections abroad - the city of [GetProvince('(int32)7395').GetName] in [GetCountry('SMT').GetName] is a trade hub for the region, and it is said that their governor is amenable to making deals with foreigners.\n\n#Y This mission will be bypassed if we own#! [GetProvince('(int32)7395').GetName|G] #Y or if it is our subject#!. \n\n\n\n\n\n\n\n\n\n@india_mil1!"
 
-01_fugandulu_task_17: "Jade Mines Of Myitkyina"
-01_fugandulu_task_17_DESC: "The rare trade good jade @jade! can be found in the province of [GetProvince('(int32)8813').GetName], and [ROOT.GetCountry.GetRuler.GetName] has demanded that we invest our resources into the region - we need to build a mine there immediately.\n\n\n\n\n\n\n\n\n\n\n@event_pic2!"
+01_fugandulu_task_17: "Jade Mines Of Piao"
+01_fugandulu_task_17_DESC: "The rare trade good jade @jade! can be found in the province of [GetProvince('(int32)9405').GetName], and [ROOT.GetCountry.GetRuler.GetName] has demanded that we invest our resources into the region - we need to build a mine there immediately.\n\n\n\n\n\n\n\n\n\n\n@event_pic2!"
 
 01_fugandulu_task_18: "The Nats Return To #E Halin#!"
 01_fugandulu_task_18_DESC: "Although the inhabitants of [GetProvince('(int32)8778').GetName] have abandoned the #T Natic Faith#!, [ROOT.GetCountry.GetRuler.GetName] has vowed to see the Nats return to the holy site located within the city.\n\n\n\n\n\n\n\n\n\n@india_mil5!"
-halin_needs_religious_investments_tt: "We need the #T Make Religious Endowments#! Province Investment in the province of #Y Pyu#!."
+halin_needs_religious_investments_tt: "We need the #T Make Religious Endowments#! Province Investment in the province of #Y Halin#!."
 
 01_fugandulu_task_19: "The Great Temple Of Kuji'i Nat"
 01_fugandulu_task_19_DESC: "[ROOT.GetCountry.GetRuler.GetName] has [ROOT.GetCountry.GetRuler.GetHerHis] eye on establishing a permanent legacy within [ROOT.GetCountry.GetName], and building a magnificent temple for [GetDeityDefinition('omen_kujii').GetName] in [ROOT.GetCountry.GetCapital.GetName] has been suggested as a way to ensure [ROOT.GetCountry.GetRuler.GetHerHis] name remains unforgotten by our descendants.\n\n#R Converting to another faith will disable this task.#!\n\n\n\n\n\n\n\n\n\n@persia_mil7!"
@@ -84,6 +83,7 @@ pugramadvara_not_exists: "#Y Pugramadvara#! must NOT exist."
 you_need_to_form_pugramadvara_tt: "We need to take the decision to #T Form Pugramadvara#!."
 form_pugramadvara: "Form Pugramadvara"
 form_pugramadvara_desc: "By conquering the floodplains and foothills of the valleys that lie between the impassable Burma Mountains, we have brought together a land that shall become a bastion of the restored Natic Faith; 'Pugramadvara', or the 'Doorway To the Lands of the Pyu'."
+
 
 
 #Modifiers
@@ -105,7 +105,7 @@ fugandulu_indian_fruit_trade_mod: "Indian Trading Connections"
 desc_fugandulu_indian_fruit_trade_mod: "We have established permanent trade with the Indian cities of the Pracya region."
 fugandulu_indian_capital_trade_mod: "Fruit Markets of Sri Ksetra"
 desc_fugandulu_indian_capital_trade_mod: "The rare fruits that are found in the Irrawaddy Valley are found in abundance in the marketplaces of Sri Ksetra."
-mon_jade_mines_modifier_fugandulu: "Jade Mines of Myitkyina"
+mon_jade_mines_modifier_fugandulu: "Jade Mines of Piao"
 desc_mon_jade_mines_modifier_fugandulu: "The Mon tribes have built mines in this province in order to extract as much of the rare mineral jade as possible."
 fugandulu_nat_temple_mod: "The Great Temple Of Kuji'i Nat"
 desc_fugandulu_nat_temple_mod: "The Mon tribes of the Irrawaddy Valley have erected a magnificent temple in their capital city, one that will serve as the seat of the Natic Faith."
@@ -147,8 +147,8 @@ me_fugandulu_6.a: "May the Nats protect the light of [ROOT.GetCountry.GetAdjecti
 me_fugandulu_6_tooltip: "The mission task '#Y $01_fugandulu_task_6$#!' has now been #G Completed#!!"
 
 me_fugandulu_7_title: "$01_fugandulu_task_7$"
-me_fugandulu_7_desc: "It has long been rumored that there are precious metals to be found on the plains of [GetProvince('(int32)8773').GetName] - a secret that was jealously guarded by the Pyu locals - so once the province fell into the possession of [ROOT.GetCountry.GetName], [ROOT.GetCountry.GetRuler.GetName] wasted no time in sending out [ROOT.GetCountry.GetRuler.GetHerHis] excavators to determine the veracity of these stories.\n\nWhat everyone said was true, thankfully, and a mine was quickly constructed in an auspicious location. Soon, not only were rich bands of gold uncovered, but also thick veins of silver as well - an absolute fortune for the taking. In order to celebrate this serendipitous discovery, [ROOT.GetCountry.GetRuler.GetFirstName] has called for the minting of coins to take place in [ROOT.GetCountry.GetCapital.GetName]."
-me_fugandulu_7.a: "Having our own coins will facilitate trade - this is a good thing"
+me_fugandulu_7_desc: "It has long been rumored that there are precious gemstones to be found on the plains of [GetProvince('(int32)8773').GetName] - a secret that was jealously guarded by the Pyu locals - so once the province fell into the possession of [ROOT.GetCountry.GetName], [ROOT.GetCountry.GetRuler.GetName] wasted no time in sending out [ROOT.GetCountry.GetRuler.GetHerHis] excavators to determine the veracity of these stories.\n\nWhat everyone said was true, thankfully, and a mine was quickly constructed in an auspicious location. Soon, not only were diamonds uncovered, but also emeralds as well - an absolute fortune for the taking. In order to celebrate this serendipitous discovery, [ROOT.GetCountry.GetRuler.GetFirstName] has called for the minting of coins to take place in [ROOT.GetCountry.GetCapital.GetName]. We foresee many foreign merchants coming to our markets, and we will need our own currency in order to facilitate trade."
+me_fugandulu_7.a: "Having our own coins will ensure that we receive fair value"
 me_fugandulu_7_tooltip: "The mission task '#Y $01_fugandulu_task_7$#!' has now been #G Completed#!!"
 
 me_fugandulu_8_title: "$01_fugandulu_task_8$"
