--- a/localization/english/text_l_english.yml
+++ b/localization/english/text_l_english.yml
@@ -501,6 +501,35 @@
  province_improvement_warm_period:0 "Warm Period"
  desc_province_improvement_warm_period:0 "It seems the gods have blessed us with warmth and better growth these last years."
 
+citrus: "Citrus"
+ citrusDESC: "Limes, lemons, oranges, citrons, tangerines; tart and juicy, citrus fruits are highly-desired for their vibrant flavors and acidity."
+ cloves: "Cloves"
+ clovesDESC: "Flower buds from the sweet-smelling clove tree are dried and ground into spice, which are used as medicine, as well as for flavoring dishes."
+ cowrie_shells: "Cowrie Shells"
+ cowrie_shellsDESC: "Cowrie Shells have long been used as a form of currency in the East, utilized both in China and India to help facilitate trade, and are even sometimes used by tribes as ritual objects."
+ ebony: "Ebony"
+ ebonyDESC: "One of the finest woods, able to be polished to a mirror finish and thus highly prized for its ornamental properties, ebony is often utilized by master craftsmen."
+ exotic_beasts: "Exotic Beasts"
+ exotic_beastsDESC: "Because there is always demand for thrilling spectacles and entertainment, there is a thriving trade for exotic beasts. Vast sums are often spent to catch lions, tigers and bears for the arenas and courts of the civilized world."
+ ivory: "Ivory"
+ ivoryDESC: "Taken from the tusks of elephants, ivory is a luxury trade good that is favored by jewelers and other artisans that work with high-value items."
+ nutmeg: "Nutmeg"
+ nutmegDESC: "The ground seed of the nutmeg tree is noted for its pungent aroma and is often used to flavor dishes, both sweet and savory, and could double as a medicine for a wide variety of ailments."
+ opium: "Opium"
+ opiumDESC: "The opium poppy can be processed to create a highly-addictive drug, one that erases memories and brings indescribable pleasure with its dank clouds of narcotic smoke."
+ pearls: "Pearls"
+ pearlsDESC: "When an irritant like a grain of sand enters the shell of a mollusk, eventually a beautiful pearl is produced."
+ porcelain: "Porcelain"
+ porcelainDESC: "A type of specialized ceramic that is created in an incredibly hot kiln, porcelains are often glazed and decorated with stylized images - a sharp contrast to the simpler earthenware dishes that are made."
+ rice: "Rice"
+ riceDESC: "Often found growing in carefully cultivated terraces, rice is a starchy grain that is the foundation of many Eastern cuisines."
+ wootz_steel: "Wootz Steel"
+ wootz_steelDESC: "Blacksmiths in southern India created this carbon-infused alloy of steel hundreds of years ago, which has quickly become prized for its strength and durability. A sword made from wootz steel is often worth its weight in gold."
+ tea: "Tea"
+ teaDESC: "The leaves of this fragrant shrub are often dried and mixed with boiling water to create a refreshing beverage, one that banishes sleep while promoting a sense of happiness and well-being."
+ tortoise_shell: "Tortoise Shell"
+ tortoise_shellDESC: "Desired for their unique coloring, tortoise shells, found in shades of brown and amber, are often used to make jewelry and other valuable goods, like musical instruments."
+
  minaable_tradegood_required:0 "Requires #Y Stone#!, #Y Marble#!, #Y Precious Metals#!, #Y Base Metals#!, #Y Iron#!, #Y Cinnabar#!, #Y Lapis Lazuli#!, #Y Jade#! or #Y Gemstones#!."
 
  # Invictus barbarians
