almost done but i have class moment

--- a/localization/english/FMO_character_focus_l_english.yml
+++ b/localization/english/FMO_character_focus_l_english.yml
@@ -131,7 +131,7 @@ does_not_have_a_civic_focus_tt:0 "[SCOPE.GetRootScope.GetCharacter.GetName] does
 does_not_have_a_zeal_focus_tt:0 "[SCOPE.GetRootScope.GetCharacter.GetName] does not have a #Y Zeal#! focus."
 
 #Martial Required Tooltips
-does_not_have_loyalty_and_respect_tt:0 "The #Y 'Loyalty and Respect'#! character focus perk character focus perk must be completed."
+does_not_have_loyalty_and_respect_tt:0 "The #Y 'Loyalty and Respect'#! character focus perk must be completed."
 does_not_have_loyal_generals_tt:0 "The #Y 'Loyal Generals'#! character focus perk must be completed."
 does_not_have_naval_expansion_tt:0 "The #Y 'Naval Expansion'#! character focus perk must be completed."
 does_not_have_inspiring_commander_tt:0 "The #Y 'Inspiring Commander'#! character focus perk must be completed."
