--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -666,13 +666,13 @@ l_english:
  jomon_duuchuu_missions_task_17_DESC:0 "The use of scare tactics is not above us. In order to take over the strategically important island of #E Tamna#!, we will terrify its populace. And if they still do not submit, we will simply declare war, striking them down, and bringing them into the fold. \n\n\n\n\n\n\n\n\n\n@egypt_mil22!"
  
  jomon_duuchuu_missions_task_18:0 "Oki for Okinawa"
- jomon_duuchuu_missions_task_18_DESC:0 ""
+ jomon_duuchuu_missions_task_18_DESC:0 "The island of #E Oki#! is humorously named similarly to our island of #E Okinawa#!, or #E Uchinaa#!. Despite that random detail, the island is also positioned in the center of the #E Sea of Japan#!, making a useful island to have in order to project power across this northern sea. \n\n\n\n\n\n\n\n\n\n@italic_mil11!"
  
  jomon_duuchuu_missions_task_19:0 "Settlers of Sato"
- jomon_duuchuu_missions_task_19_DESC:0 ""
+ jomon_duuchuu_missions_task_19_DESC:0 "The island of #E Sato#! is particularly uncivilized... and in need of a new owner! That can always be us. Its position will help us project power into the northern #E Honshu#! region, where there are people who... somehow remind us of ourselves. \n\n\n\n\n\n\n\n\n\n@egypt_mil5!"
  
  jomon_duuchuu_missions_task_20:0 "Our So-Called Family"
- jomon_duuchuu_missions_task_20_DESC:0 ""
+ jomon_duuchuu_missions_task_20_DESC:0 "Divided by a sea of #E Yayoi#!, and even before that, thousands of years of unique developments, the #E Epi-Jomon#! people are now within our sights. Despite our rather weak link to our distant cousins, we should try and civilize them, introducing them to our ways. \n\n\n\n\n\n\n\n\n\n@italic_mil7!"
 
  jomon_duuchuu_missions_task_21:0 "Purchase Changcheng"
  jomon_duuchuu_missions_task_21_DESC:0 "The port of #E Changcheng#! lies in the territory of the #E Yan Chinese#! people. Despite their long distance from our islands, we have a history of trading with them. We should be able to fetch a good price! \n\n\n\n\n\n\n\n\n\n@china_mil8!"
@@ -681,19 +681,19 @@ l_english:
  jomon_duuchuu_missions_task_22_DESC:0 "The seas around us have always been invested with #E Pirates#!. With our new military focus, we should consider the possibility of adopting a #E Piratical Monarchy#! government. \n\n\n\n\n\n\n\n\n\n@persia_mil3!"
 
  jomon_duuchuu_missions_task_23:0 "Yoink Yongjudong"
- jomon_duuchuu_missions_task_23_DESC:0 ""
+ jomon_duuchuu_missions_task_23_DESC:0 "The port of #E Yongjudong#! would make an amazing military and economic base. It's defensible, it's an island, and it lays equidistant between the islands of #E Formosa#! and #E Tamna#!. In fact, we should simply seize the port, even if it causes war. How will they ever take it back with our large and formidible navy? \n\n\n\n\n\n\n\n\n\n@celt_mil1!"
 
  jomon_duuchuu_missions_task_24:0 "The Yuta Rebuttle"
  jomon_duuchuu_missions_task_24_DESC:0 "The #Y Yuta#! are another major faction of the #E Kaminchu#! religious class. Although the #Y Nuuru#! are typically more important, the #Y Yuta#! have a habit of undercutting them anyways. They refute the #Y Nuruu's#! suggestion to take a new, less passive, stance on diplomacy. Let's hear what they have to say for themselves. \n\n\n\n\n\n\n\n\n\n@italic_mil18!"
 
  jomon_duuchuu_missions_task_25:0 "Yaeyama Yuta Proposal"
- jomon_duuchuu_missions_task_25_DESC:0 "The #Y Yuta#! class have another proposal concering our governance of the #E Yizhou#! people. Let's hear what they have to say for themselves."
+ jomon_duuchuu_missions_task_25_DESC:0 "The #Y Yuta#! class have another proposal concering our governance of the #E Yizhou#! people. Let's hear what they have to say for themselves. \n\n\n\n\n\n\n\n\n\n@east_steppemil6!"
 
  jomon_duuchuu_missions_task_26:0 "Name of the Nansei"
- jomon_duuchuu_missions_task_26_DESC:0 ""
+ jomon_duuchuu_missions_task_26_DESC:0 "The #E Yayoi#! seem to prefer the name #E Nansei#! for us. Considering many of them are now under us, the #E Yayoi#! outside our jursidiction have begun to call the #E Kumaso#! within our borders as #E Nansei#! as well now. Perhaps we should formally recognize this emergent culture? \n\n\n\n\n\n\n\n\n\n@east_steppemil5!"
 
  jomon_duuchuu_missions_task_27:0 "The Way of the Te"
- jomon_duuchuu_missions_task_27_DESC:0 "The primordial form of #E Karate#! was called #E Te#!, developped in #E Okinawa#!. It's unknown when #E Te#! was first developped, however, it's likely that it existed in decentralized forms since the beggining of #E Ryukyuan#! history."
+ jomon_duuchuu_missions_task_27_DESC:0 "The primordial form of #E Karate#! was called #E Te#!, developped in #E Okinawa#!. It's unknown when #E Te#! was first developped, however, it's likely that it existed in decentralized forms since the beggining of #E Ryukyuan#! history. \n\n\n\n\n\n\n\n\n\n@tibet_mil8!"
  
  
  #Tooltips
@@ -707,14 +707,18 @@ l_english:
  okinawa_oracle_tt:0 "We will recieve a revelation from the #Y Nuuru Priestess#!."
  okinawa_osumi_tt:0 "Any country owns #Y [GetProvince('(int32)9740').GetName]#!."
  okinawa_make_an_offer_tt:0 "Make an offer to purchase #Y [GetProvince('(int32)9740').GetName]#!"
- duuchuu_yoink_tt:0 "Our #E Navy#! has #Y 30#! or more ships and has a #E Comander#!."
+ okinawa_sado_tt:0 "Any country owns #Y [GetProvince('(int32)10555').GetName]#!"
+ duuchuu_yoink_tt:0 "Our #E Navy#! has #Y 30#! or more ships and has a #E Commander#!."
  okinawa_disaster_tt:0 "#R If what the #Y Nuruu#! says is true, we will experience the following:#!"
  yuta_1_tt:0 "We will hear the proposal of the #Y Yuta Spirit-Medium#!."
  decide_matsura_tt:0 "We will decide what to do with the area of #Y Matsura#!."
  ghost_deity_tt:0 "We unlock a ghastly deity, #Y Ikiryo#!."
  haunted_tt:0 "We may become #R haunted#! by a ghost!"
  haunted_tt_2:0 "We will remove any ghost #R hauntings#!."
- 
+ nansei_culture_tt:0 "All our #Y Kumaso#! pops in #E Wa#! will convert to #Y Nansei#! culture."
+ kumaso_decision_tt:0 "We will decide if the #Y Nansei#! culture is worth recognizing."
+ alliance_jomon_tt:0 "Has an #E alliance#! with any #Y Jomon#! culture country."
+ send_request_tt:0 "We will send a request to #Y Vassalize#! our ally."
  
  #Modifiers
  okinawa_calm:0 "Calm Before the Storm"
@@ -730,6 +734,8 @@ l_english:
  conquerers_of_kumaso:0 "Conqueror of Kumaso"
  conquerers_of_matsura:0 "Conqueror of Matsura"
  ghost_in_tsushima:0 "Haunted by Ghosts"
+ way_of_te:0 "Way of the Te"
+ denied_syncretism_okinawa:0 "Denied Cultural Recognition"
  
  #Others
  shell_bracelet:0 "Silver Shell Bracelet"
@@ -748,6 +754,10 @@ l_english:
  RYU_ADJECTIVE:0 "Ryukyuan"
  form_ryukyu:0 "Proclaim the Ryukyu Kingdom"
  form_ryukyu_desc:0 "Although in history, the #E Ryukyu Kingdom#! did not appear until the 1st millenium CE, the name and culture of the #E Ryukyu#! is still around. By establishing themselves as a powerhouse of the seas between #E China#! and #E Japan#!, the people of #E Amamichuu#! have gained dominance over the waves."
+ yaemama_subject:0 "Yaeyamashima"
+ yaemama_subject_adj:0 "Yaeyama"
+ nansei_subject:0 "Nanto"
+ nansei_subject_adj:0 "Nansei"
  
  #Events
  me_duuchuu_1_title:0 "$jomon_duuchuu_missions_task_1$"
@@ -847,13 +857,17 @@ l_english:
  me_duuchuu_16_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_16$#!' has now been #G Completed#!!"
  
  me_duuchuu_17_title:0 "$jomon_duuchuu_missions_task_17$"
- me_duuchuu_17_desc:0 ""
- me_duuchuu_17.a:0 ""
+ me_duuchuu_17_desc:0 "Due to our influence growing from the island of #E Tsushima#!, we are able to send colonists all the way to #E Sado#!. We claim this island in the name of expansion into the #E Japanese Sea#!. Surely this allows our influence to be spread as far as we could possibly want it to go... at least in the north!"
+ me_duuchuu_170_desc:0 "Unfortunately, the island of #E Sado#! is already owned by the natives... however, we are prepared to pay a hefty sum in return for the island. The locals are sure to accept it."
+ me_duuchuu_17.a:0 "An excellent waypoint!"
+ me_duuchuu_17.b:0 "An excellent waypoint!"
+ me_duuchuu_17.c:0 "Forget it."
  me_duuchuu_17_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_17$#!' has now been #G Completed#!!"
  
  me_duuchuu_18_title:0 "$jomon_duuchuu_missions_task_18$"
- me_duuchuu_18_desc:0 ""
- me_duuchuu_18.a:0 ""
+ me_duuchuu_18_desc:0 "he island of #E Oki#! is also positioned in the center of the #E Sea of Japan#!, making it useful island to have in order to project power across this northern sea. We also have the option of transforming it into a city, if we so wish to do so."
+ me_duuchuu_18.a:0 "Let's make it a city!"
+ me_duuchuu_18.b:0 "Okidoki, it'll be simply a port."
  me_duuchuu_18_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_18$#!' has now been #G Completed#!!"
  
  me_duuchuu_19_title:0 "$jomon_duuchuu_missions_task_19$"
@@ -878,14 +892,39 @@ l_english:
  me_duuchuu_22_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_22$#!' has now been #G Completed#!!"
 
  me_duuchuu_23_title:0 "$jomon_duuchuu_missions_task_23$"
- me_duuchuu_23_desc:0 ""
- me_duuchuu_23.a:0 ""
+ me_duuchuu_23_desc:0 "The port and island of #E Yongjudong#! has been seized by our domineering navy and its formiddable captain. The #E Chinese#! consider this seizure an insult, but we'll see if they decide to actually do anything about it. We should learn of their intents soon in the coming months. We must be ready for war."
+ me_duuchuu_23.a:0 "What's yours is mines."
  me_duuchuu_23_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_23$#!' has now been #G Completed#!!"
 
+ me_duuchuu_230_desc:0 "Those upstart #E Ryukyu#! pirates! They have stolen the port of #E Yongjudong#! from us. They showed up with a navy of at least #E 30#! units and the locals surrendered immediately. What can we do?"
+ me_duuchuu_230.a:0 "There is nothign we can do..."
+ me_duuchuu_230.b:0 "This means war!"
+
+ me_duuchuu_231_desc:0 "The #E Chinese#! have backed down, being utterly afraid of our reputation, and unable to take back what is now rightfully ours! Hurrah!"
+ me_duuchuu_231.a:0 "Now that's what I call a right of conquest."
+
  me_duuchuu_24_title:0 "$jomon_duuchuu_missions_task_24$"
- me_duuchuu_24_desc:0 "The #E Yuta#! priestesses have come to us with a proposal. They interpret the words of the gods differently from the #E Nuruu#!. They say that influence need not be so direct, we can do so through peaceful means, and we must not forget to take care of our islands as well."
+ me_duuchuu_24_desc:0 "The #E Yuta#! spirit-mediums have come to us with a proposal. They interpret the words of the gods differently from the #E Nuruu#!. They say that influence need not be so direct, we can do so through peaceful means, and we must not forget to take care of our islands as well."
  me_duuchuu_24.a:0 "A compelling case."
  me_duuchuu_24.b:0 "We will only listen to the Nuruu."
  me_duuchuu_24_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_24$#!' has now been #G Completed#!!"
 
- me_duuchuu_26_title:0 ""
+ me_duuchuu_25_title:0 "$jomon_duuchuu_missions_task_25$"
+ me_duuchuu_25_desc:0 "The #E Yuta#! spirit-mediums from the isle of #E Yaeyama#! have come to us with an interesting proposal. They would like to form an indepedent syncretized state, adopting more #E Yaeyama#! specific traditions. While this could result in a bit of a cultural divergence between the #E Duuchuu#! and the #E Yaeyama#!, this would help us govern our newly acquired territory in #E Formosa#!.\n\nWe would keep the ports of #E Pinghu#! and #E Anaro#! regardless of our choice. So, shall we consider the #E Yuta#! proposal and create a feudatory in #E Formosa#!?"
+ me_duuchuu_25.a:0 "Establish Yaeyamashima."
+ me_duuchuu_25.b:0 "Establish Yaeyamashima, but keep the area of [GetProvince('(int32)10831').GetArea.GetName|E]"
+ me_duuchuu_25.c:0 "Rule over the island directly."
+ me_duuchuu_25_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_25$#!' has now been #G Completed#!!"
+
+ me_duuchuu_26_title:0 "$jomon_duuchuu_missions_task_26$"
+ me_duuchuu_26_desc:0 "The #E Yayoi#! term for us #E Duuchuu#! is #E Nansei#!. Since our jurisdiction over many #E Kumaso#! people, the #E Yayoi#! from outside our borders have begun to refer to their own within our borders as #E Nansei#! now instead. We have a choice to recognize this new culture should we wish. Perhaps... we could even adopt this ourselves?"
+ me_duuchuu_26.a:0 "We will recognize this new culture within our borders."
+ me_duuchuu_26.b:0 "We will adopt this #E Nansei#! culture everywhere!"
+ me_duuchuu_26.c:0 "We will create a #E Nansei Feudatory#! state!"
+ me_duuchuu_26.d:0 "We will keep the status quo."
+ me_duuchuu_26_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_26$#!' has now been #G Completed#!!"
+
+ me_duuchuu_27_title:0 "$jomon_duuchuu_missions_task_27$"
+ me_duuchuu_27_desc:0 "The way of #E Te#! simply means the way of the hand in our language. Many people train fiercly in mind, body, and soul. It's time to formalize this martial artform and use it to train our own soldierly. The #E Discipline#! will surely pay dividends."
+ me_duuchuu_27.a:0 "Hiiiiya!"
+ me_duuchuu_27_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_27$#!' has now been #G Completed#!!"
