--- a/localization/english/missions/veneto_missions_l_english.yml
+++ b/localization/english/missions/veneto_missions_l_english.yml
@@ -274,7 +274,7 @@ secure_venetia_nationwide_defense_tt:0 "#E [SCOPE.GetRootScope.GetCountry.GetNam
 
 secure_venetia_mission_task_55:0 "Raetic Alliance"
 secure_venetia_mission_task_55_DESC:0 "Our relationship with the Raeti tribes is long and complicated. These people have been inhabiting the mountains to our north for as long as we can remember, having entered into numerous skirmishes along our northern border, but also having brought trade and travelers through our lands. Now that we focus our sight beyond the mountains to the north, and our own coast to the south, it is time that we forge more permanent relations with our old neighbors.\n\n\n\n\n\n\n\n\n\n@celt_mil3!"
-secure_venetia_alliance_with_the_rhaeti_tt:0 "#Y [GetCountry('RAE').GetName]#!'s opinion of #E [SCOPE.GetRootScope.GetCountry.GetName]#! will greatly #Y increase#!."
+secure_venetia_alliance_with_the_rhaeti_tt:0 "#Y [GetCountry('Y07').GetName]#!'s opinion of #E [SCOPE.GetRootScope.GetCountry.GetName]#! will greatly #Y increase#!."
 
 secure_venetia_mission_task_56:0 "Protect Rhaetia"
 secure_venetia_mission_task_56_DESC:0 "As our commercial ties with [GetCountry('RAE').GetName] strengthen, so too does the flow of amber coming in from northern Europe through [GetCountry('RAE').GetAdjective] territory. However, considering their weak military force, we are always at risk of losing this boost in commerce if [GetCountry('RAE').GetName] was to find itself under attack. As a country possessing a larger and more organized means of defense, it falls to us to secure the protection of the Alpine route through Rhaetia. Besides, it's in [GetCountry('RAE').GetName]'s best interest as well as ours.\n\n\n\n\n\n\n\n\n\n@celt_mil7!"
