--- a/localization/english/missions/dian_missions_l_english.yml
+++ b/localization/english/missions/dian_missions_l_english.yml
@@ -100,57 +100,54 @@
  me_dian_7.a: "Our metalwork is second to none."
 
  me_dian_8_title: "$dian_missions_task_8$"
- me_dian_8_desc: ""
+ me_dian_8_desc: "The secrets of [GetCountry('SMI').GetName] technology have been unlocked, King [ROOT.GetCountry.GetRuler.GetName]! The great nation of [ROOT.GetCountry.GetName] will undoubtedly benefit from the discovery of these previously unknown innovations. Combined with our already superior culture, these inventions will propel us to the heavens!"
  me_dian_8.a: "We have learned much from the Chu."
 
  me_dian_9_title: "$dian_missions_task_9$"
- me_dian_9_desc: ""
+ me_dian_9_desc: "The forever arrogant Kingdom of [GetCountry('YLG').GetName], even in its final hour, gawked at the notion of their own inferiority. Their ruler, [GetCountry('YLG').GetRuler.GetName], still belittled our envoys while asking for his peaceful surrender after they lost their armies in the field. The delusional leader insisted to our envoys that #E Yelang#! was still amongst the greatest powers in the known world. Our emissaries, unsure of whether to laugh, simply relayed the reaction to [ROOT.GetCountry.GetRuler.GetName], who then ordered the forceful arrest of the #E Yelang#! king."
  me_dian_9.a: "Yelang thinks too highly of itself."
 
  me_dian_10_title: "$dian_missions_task_10$"
- me_dian_10_desc: ""
+ me_dian_10_desc: "The Kindom of [ROOT.GetCountry.GetName] is finally in possession of sources of the great shell trade, King [ROOT.GetCountry.GetRuler.GetName]! Long have we had to important these luxury goods from the various coastal peoples in the Great Ocean, but now we hold dominion over these lands and will have enough shells to satiate our own appetite, as well as export some for additional profit! Addtionally, our artisans have commemorated our recent conquests over the shell producing provinces by creating a unique bronze shell storage vessel, in the name of you, o King [ROOT.GetCountry.GetRuler.GetName]."
  me_dian_10.a: "The booming shell trade will make us wealthy."
 
  me_dian_11_title: "$dian_missions_task_11$"
- me_dian_11_desc: ""
+ me_dian_11_desc: "As King [ROOT.GetCountry.GetRuler.GetName] stepped into the brightly adorned halls within the new royal tombs, he was awestruck by the brilliant architecture of statues, stone columns and archways. The entrance arch was studded with gemstones, and each tomb held offerings from across our realm consisting of incense, jade, gold, porcelain vessels and more. This, the king thought, was a necropolis worthy of the kings of [ROOT.GetCountry.GetName], including himself."
  me_dian_11.a: "The Royal Tombs are complete!"
  
  me_dian_1100_title: "$dian_missions_task_11$"
- me_dian_1100_desc: ""
- me_dian_1100.a: ""
+ me_dian_1100_desc: "The budget for the royal tombs has come to be staggering. However, we must not disgrace the name of our late king, or the prestige of the Kingdom of [ROOT.GetCountry.GetName]. King [ROOT.GetCountry.GetRuler.GetName] has commanded the financial ministers to come up with the funds, no excuses."
+ me_dian_1100.a: "We will spare no expense."
 
  me_dian_12_title: "$dian_missions_task_12$"
- me_dian_12_desc: ""
+ me_dian_12_desc: "The rugged lands of the [GetCountry('QIO').GetName] and [GetCountry('ZUO').GetName] peoples are now under our military occupation, King [ROOT.GetCountry.GetRuler.GetName]! While the harsh conditions of the steep mountains of #E Tibetan#! did impart some attrition on our forces, we were able to overcome the barbarians and the terrain to tame this barren place at the edge of the world."
  me_dian_12.a: "The northern passes are finally secure."
 
  me_dian_13_title: "$dian_missions_task_13$"
- me_dian_13_desc: ""
- me_dian_13.a: ""
- me_dian_13.b: ""
+ me_dian_13_desc: "The financial ministers have informed King [ROOT.GetCountry.GetRuler.GetName] that a variety of goods and gold have been gathered to present an ostentatious envoy to one of the courts of the #E Middle Kingdom#!. Some ministers believe we should send an emissary directly to the #E Son of Heaven#! himself in [GetCountry('ZHO').GetName]; yet others desire military secrets from the [GetCountry('ZHA').GetName], and finally the economists wish to establish relations with the wealthy [GetCountry('QII').GetName]."
+ me_dian_13.a: "Let us sent an emissary to the Emperor of the Middle Kingdom."
+ me_dian_13.b: "Envoys must go the militaristic state of Zhao."
+ me_dian_13.c: "The wealthy Qi would be a good choice to establishment our first Chinese embassy..."
  
  me_dian_1300_title: "$dian_missions_task_13$"
- me_dian_1300_desc: ""
- me_dian_1300.a: ""
+ me_dian_1300_desc: "The rising Kingdom of [GetCountry('DIA').GetName] has sent an official embassy to the court of [GetCountry('ZHO').GetName], o #E Son of Heaven#!. They bring gifts of gold, fine bronze and shells, as well as a promise of heavenly obedience to thine great majesty, my emperor. Perhaps these upstarts may be useful in your political struggles, [GetCountry('ZHO').GetRuler.GetName]."
+ me_dian_1300.a: "Another potential ally for the emperor."
  
  me_dian_1301_title: "$dian_missions_task_13$"
- me_dian_1301_desc: ""
- me_dian_1301.a: ""
+ me_dian_1301_desc: "The rising Kingdom of [GetCountry('DIA').GetName] has sent an official embassy to the court of [GetCountry('ZHA').GetName], great King [GetCountry('ZHA').GetRuler.GetName]. They bring gifts of gold, shells, fine bronze ceremonial swords as well as a treastise on their tactics to battle the #E Rong#! barbarian cavalry, as they had experience fighting them in #E Eastern Tibet#!. [GetCountry('ZHA').GetRuler.GetName] was grateful most of all for this last gift, as he then decided to send a friendly envoy to #E Dian#! in return."
+ me_dian_1301.a: "Perhaps the Dian will be of use..."
  
  me_dian_1302_title: "$dian_missions_task_13$"
- me_dian_1302_desc: ""
- me_dian_1302.a: ""
+ me_dian_1302_desc: "The rising Kingdom of [GetCountry('DIA').GetName] has sent an official embassy to the court of [GetCountry('QII').GetName], my lord [GetCountry('QII').GetRuler.GetName]. They bring gifts of gold, shells, and a fine bronze artifact depicting ancient #E Shenic#! scenes of #E Shangdi#! in heaven, with what appears to be an unknown seal script written upon the base. King [GetCountry('QII').GetRuler.GetName] commands that we hold a consecration ceremony for this holy vessel and have the script studied by our scholars. "
+ me_dian_1302.a: "Let us learn what we can from the Dian."
 
  me_dian_14_title: "$dian_missions_task_14$"
  me_dian_14_desc: ""
  me_dian_14.a: "Revenge is sweet."
 
  me_dian_15_title: "$dian_missions_task_15$"
- me_dian_15_desc: ""
+ me_dian_15_desc: "The construction of the new capital grounds is a wonder to behold, o lord [ROOT.GetCountry.GetRuler.GetName]. The palace grounds have been upgraded to reflect the stature of your highness, and an exotic garden has been added between the kings personal quarters and the redesigned library. The upper and lower classes of [GetProvince('(int32)8914').GetName] are ecstatic at the new housing units built in their neighborhoods, and the overcrowding situation has been alleviated. Let our opulent new capital serve as a sanctuary for our citizens and a source of envy for foreigners."
  me_dian_15.a: "The new capital is a worthy seat for the Dian Kingdom."
- 
- me_dian_1500_title: "$dian_missions_task_15$"
- me_dian_1500_desc: "Our men have started relocating our capital to a more favorable position on the southern shore of Lake Dian. The first oxen with stone blocks from our old capital's building are already on their way south."
- me_dian_1500.a: "This requires hard labor."
 
  me_dian_16_title: "$dian_missions_task_16$"
  me_dian_16_desc: ""
@@ -178,7 +175,7 @@
  me_dian_18.a: "The Royal Seal will inspire awe and majesty in our court."
  
  me_dian_90_title: "Imminent Chu Invasion"
- me_dian_90_desc: "Troubling news have reached us. [GetCountry('CHU').GetRuler.GetName] has eyed an invasion of our peaceful state. It is a must for us to prepare for the invaders and make the Dian people come out on top."
+ me_dian_90_desc: "The great [GetCountry('CHU').GetName] general #E Zhuang Qiao#! is becoming political marginalized in his home country. With the decline of #E Chu#! power, and an impending defeat at the hands of rival nations of the #E Warring States#!, #E Zhuang Qiao#! is planning a rebellion against the King of Chu, [GetCountry('YLG').GetRuler.GetName]. However, should the general fail to take the #E Chu#! capital at #E Ying#!, he may look toward [ROOT.GetCountry.GetName] as a place of refuge from #E Chu#! prosecutors and attempt to usurp [ROOT.GetCountry.GetRuler.GetName] to claim our kingdom for himself."
  me_dian_90.a: "This can't be good..."
 
  #Tooltips
@@ -218,11 +215,11 @@
  
  #Treasures
  dian_steppe_vessel: "Horseman Bronze Vessel"
- dian_steppe_vessel_desc: "A splendid combination of a Dian bronze vessel with a steppe horse rider on top of it." #https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Kunming_Oct_2007_031.jpg/800px-Kunming_Oct_2007_031.jpg
+ dian_steppe_vessel_desc: "A bronze vase with various horse and animal statuettes built upon it, with a golden rider mounting a bronze steed at the top of the vessel." #https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Kunming_Oct_2007_031.jpg/800px-Kunming_Oct_2007_031.jpg
  dian_shell_vessel: "Shell Storage Vessel" #https://upload.wikimedia.org/wikipedia/commons/e/e9/CMOC_Treasures_of_Ancient_China_exhibit_-_bronze_cowrie_container.jpg
- dian_shell_vessel_desc: "The most beloved thing of a Dian, shells of all kinds, can find their place in this elaborate bronze storage vessel."
+ dian_shell_vessel_desc: "A bronze vessel adorned with animal motifs, created to store valuable shells collected by the kings of Dian."
  dian_servant_with_parasol: "Dian Servant with Parasol"
- dian_servant_with_parasol_desc: "This statue of a Dian servant holding a parasol praises our new dynasty's divinity." #https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Figure_with_parasol_%28bronze%2C_Western_Han%29_-_Yunnan_Provincial_Museum_-_DSC02253.JPG/800px-Figure_with_parasol_%28bronze%2C_Western_Han%29_-_Yunnan_Provincial_Museum_-_DSC02253.JPG
+ dian_servant_with_parasol_desc: "A bronzework displaying a Dian servant holding a large parasol to block the harsh sun from the king, showcasing both the artistic genius and the humility of the Dian people." #https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Figure_with_parasol_%28bronze%2C_Western_Han%29_-_Yunnan_Provincial_Museum_-_DSC02253.JPG/800px-Figure_with_parasol_%28bronze%2C_Western_Han%29_-_Yunnan_Provincial_Museum_-_DSC02253.JPG
  dian_bronze_house: "Dian Bronze House"
- dian_bronze_house_desc: "Our artists cast various scenes of our subjects' daily life in bronze: women and men working around their bronze house and children playing." #https://upload.wikimedia.org/wikipedia/commons/c/c7/Bronze_house_Dian_Kingdom.Y%C3%BAnn%C3%A1n_Provincial_Museum.jpg
+ dian_bronze_house_desc: "This intricately designed bronze replica of a Dian Kingdom household has everything from bedding to tiny utensils, truly a work of art." #https://upload.wikimedia.org/wikipedia/commons/c/c7/Bronze_house_Dian_Kingdom.Y%C3%BAnn%C3%A1n_Provincial_Museum.jpg
  
