--- a/localization/english/provincenames_l_english.yml
+++ b/localization/english/provincenames_l_english.yml
@@ -9281,19 +9281,19 @@
  PROV9280:0 "Kot Kamalia"
  PROV9281:0 "Sukah"
  PROV9282:0 "Nokhar"
- PROV9283:0 "Mosu"
- PROV9284:0 "Jichim"
- PROV9285:0 "Tamna"
- PROV9286:0 "Mirimidong"
- PROV9287:0 "Gojamidong"
- PROV9288:0 "Ballo"
- PROV9289:0 "Nangno"
- PROV9290:0 "Gamno"
- PROV9291:0 "Guya"
- PROV9292:0 "Dongno"
- PROV9293:0 "Saro"
- PROV9294:0 "Gijeo"
- PROV9295:0 "Bulsa"
+ PROV9283:0 ""
+ PROV9284:0 ""
+ PROV9285:0 ""
+ PROV9286:0 ""
+ PROV9287:0 ""
+ PROV9288:0 ""
+ PROV9289:0 ""
+ PROV9290:0 ""
+ PROV9291:0 ""
+ PROV9292:0 ""
+ PROV9293:0 ""
+ PROV9294:0 ""
+ PROV9295:0 ""
  PROV285_aeolian:0 "Kyme"
  PROV7517_aksumite_group:0 "Olbia Pount"
  PROV1986_anatolian:0 "Pogla"
