rest of okinawa tree (finShed, probs bugs tho)

--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -1549,3 +1549,242 @@ Naagusuku: "Naagusuku"
 Onaga: "Onaga"
 Dakujaku: "Dakujaku"
 Yara: "Yara"
+
+Adarian: "Adarian"
+Adarii: "Adarii"
+Aetla: "Aetla"
+Agum-duniash: "Agum-duniash"
+Akatziri: "Akatziri"
+Akhshunwar: "Akhshunwar"
+Alai: "Alai"
+Alakhana: "Alakhana"
+Alchon: "Alchon"
+Alchono: "Alchono"
+Alian: "Alian"
+Alkhan: "Alkhan"
+Alkhon: "Alkhon"
+Altziagiri: "Altziagiri"
+Alxon: "Alxon"
+Ambaru-shugurra: "Ambaru-shugurra"
+Angiscires: "Angiscires"
+Apa-zini: "Apa-zini"
+Arbaba-zini: "Arbaba-zini"
+Ardaric: "Ardaric"
+Arshanta-gidar: "Arshanta-gidar"
+Arshanta-laguda: "Arshanta-laguda"
+Arumti-indash: "Arumti-indash"
+Aruna-duzagash: "Aruna-duzagash"
+Ashdunna-bugash: "Ashdunna-bugash"
+Ashlulu-kamulla: "Ashlulu-kamulla"
+Ashta-hardash: "Ashta-hardash"
+Askoum: "Askoum"
+Ata-halki: "Ata-halki"
+Atarshumki: "Atarshumki"
+Atta-Khumma: "Atta-Khumma"
+Atta-Khumma-nisaa: "Atta-Khumma-nisaa"
+Attar-halki: "Attar-halki"
+Attila: "Attila"
+Badar-akmul: "Badar-akmul"
+Balamber: "Balamber"
+Baraule: "Baraule"
+Baraulian: "Baraulian"
+Bardores: "Bardores"
+Barhu-shihu: "Barhu-shihu"
+Barhu-shikme: "Barhu-shikme"
+Basich: "Basich"
+Bithi: "Bithi"
+Bithian: "Bithian"
+Bittigur: "Bittigur"
+Bleda: "Bleda"
+Carbia: "Carbia"
+Carbian: "Carbian"
+Charaton: "Charaton"
+Chelchel: "Chelchel"
+Chionite: "Chionite"
+Chunni: "Chunni"
+Dadunna-sali: "Dadunna-sali"
+Dakash-laguda: "Dakash-laguda"
+Dengizich: "Dengizich"
+Djabgu: "Djabgu"
+Dubziban-tassi: "Dubziban-tassi"
+Ebodalo: "Ebodalo"
+Edeko: "Edeko"
+Ediko: "Ediko"
+Ellac: "Ellac"
+Ellak: "Ellak"
+Elteber: "Elteber"
+Ennons: "Ennons"
+Ernak: "Ernak"
+Gab-indash: "Gab-indash"
+Gabnila-sah: "Gabnila-sah"
+Gandash-mirizir: "Gandash-mirizir"
+Gargori: "Gargori"
+Gitil: "Gitil"
+Gitilian: "Gitilian"
+Gurzar-duzagash: "Gurzar-duzagash"
+Hala-duniash: "Hala-duniash"
+Hala-shihu: "Hala-shihu"
+Hameru-maruttash: "Hameru-maruttash"
+Hameru-shipak: "Hameru-shipak"
+Hana-gidar: "Hana-gidar"
+Haru: "Haru"
+Hashampa-nanai: "Hashampa-nanai"
+Hasharba-kassu: "Hasharba-kassu"
+Hashunna-harbe: "Hashunna-harbe"
+Hephthalite: "Hephthalite"
+Hiosto: "Hiosto"
+Humarti-nisaa: "Humarti-nisaa"
+Humban: "Humban"
+Humzana-nisaa: "Humzana-nisaa"
+Hunor: "Hunor"
+Hunoulph: "Hunoulph"
+Hurba-bugash: "Hurba-bugash"
+Huta-tassi: "Huta-tassi"
+Hwade-gang: "Hwade-gang"
+Iddin: "Iddin"
+Iddin-nisaa: "Iddin-nisaa"
+Ige-kittah: "Ige-kittah"
+Illutuer: "Illutuer"
+Ilulu-shihu: "Ilulu-shihu"
+Innana-nisaa: "Innana-nisaa"
+Inshushinak: "Inshushinak"
+Inshushinak-Zunkir-Nappipir: "Inshushinak-Zunkir-Nappipir"
+Ipaitum-kassu: "Ipaitum-kassu"
+Ipashi-sali: "Ipashi-sali"
+Iscerbel: "Iscerbel"
+Ithocor: "Ithocor"
+Jabgu: "Jabgu"
+Javukha: "Javukha"
+Kadag: "Kadag"
+Kadash-miriash: "Kadash-miriash"
+Kamnaskires: "Kamnaskires"
+Kamnaskires-nisaa: "Kamnaskires-nisaa"
+Karali: "Karali"
+Karalian: "Karalian"
+Khingila: "Khingila"
+Khunnoi: "Khunnoi"
+Kianibi-shimalia: "Kianibi-shimalia"
+Kidara: "Kidara"
+Kidarite: "Kidarite"
+Kidin-ishshan: "Kidin-ishshan"
+Kirash: "Kirash"
+Kirshar-nisaa: "Kirshar-nisaa"
+Kirwashir: "Kirwashir"
+Kirwashir-nisaa: "Kirwashir-nisaa"
+Kudur-shugurra: "Kudur-shugurra"
+Kuk: "Kuk"
+Kuk-ilhush: "Kuk-ilhush"
+Kukhshimti-nisaa: "Kukhshimti-nisaa"
+Kukla-shimalia: "Kukla-shimalia"
+Kun-khi: "Kun-khi"
+Kunigi-maruttash: "Kunigi-maruttash"
+Kursich: "Kursich"
+Kutik-hutran: "Kutik-hutran"
+Kutir: "Kutir"
+Kutir-napirisha: "Kutir-napirisha"
+Kutrigur: "Kutrigur"
+Lagun: "Lagun"
+Magor: "Magor"
+Malka: "Malka"
+Manudi-turgu: "Manudi-turgu"
+Martash-mirizir: "Martash-mirizir"
+Matsu: "Matsu"
+Mehama: "Mehama"
+Mer: "Mer"
+Meyam: "Meyam"
+Mundo: "Mundo"
+Mundzuk: "Mundzuk"
+Mushia-kassu: "Mushia-kassu"
+Nahhunte: "Nahhunte"
+Napi-nashur: "Napi-nashur"
+Napki: "Napki"
+Nashbu-shala: "Nashbu-shala"
+Nashur: "Nashur"
+Neulac: "Neulac"
+Neulacan: "Neulacan"
+Nezak: "Nezak"
+Nirah: "Nirah"
+Nisuni: "Nisuni"
+Numena-humban: "Numena-humban"
+Nurec: "Nurec"
+Nurekian: "Nurekian"
+Octar: "Octar"
+Odoacer: "Odoacer"
+Oebarsius: "Oebarsius"
+Oriso: "Oriso"
+Othocor: "Othocor"
+Ouptaros: "Ouptaros"
+Pahir-hutran: "Pahir-hutran"
+Pakullia: "Pakullia"
+Pakullian: "Pakullian"
+Pakullii: "Pakullii"
+Pakulliis: "Pakulliis"
+Purna-sah: "Purna-sah"
+Pushte-alban: "Pushte-alban"
+Puzur: "Puzur"
+Puzur-nisaa: "Puzur-nisaa"
+Ruga: "Ruga"
+Rugila: "Rugila"
+Sabir: "Sabir"
+Sanaphar: "Sanaphar"
+Sanapharian: "Sanapharian"
+Sardar: "Sardar"
+Sardarian: "Sardarian"
+Sartu: "Sartu"
+Serra: "Serra"
+Serrian: "Serrian"
+Shadu-hardash: "Shadu-hardash"
+Sharrat-nisaa: "Sharrat-nisaa"
+Shengil: "Shengil"
+Sheqa-kamulla: "Sheqa-kamulla"
+Shilhak: "Shilhak"
+Shilhishkia: "Shilhishkia"
+Shima-hudha: "Shima-hudha"
+Shimash-nisaa: "Shimash-nisaa"
+Shipta-alban: "Shipta-alban"
+Shushinak: "Shushinak"
+Shushun-tanhish: "Shushun-tanhish"
+Sin: "Sin"
+Siul: "Siul"
+Siulian: "Siulian"
+Sollaian: "Sollaian"
+Solloai: "Solloai"
+Tahrah: "Tahrah"
+Tahrah-nisaa: "Tahrah-nisaa"
+Talskubilo: "Talskubilo"
+Tammaritu: "Tammaritu"
+Tammaritu-nisaa: "Tammaritu-nisaa"
+Temti-inshushinak: "Temti-inshushinak"
+Tepti: "Tepti"
+Tepti-nissa: "Tepti-nissa"
+Tethi: "Tethi"
+Tethian: "Tethian"
+Thiria: "Thiria"
+Thirian: "Thirian"
+Thudda: "Thudda"
+Thuddan: "Thuddan"
+Toddul: "Toddul"
+Toddulian: "Toddulian"
+Toramana: "Toramana"
+Tukulti: "Tukulti"
+Ukin-shipak: "Ukin-shipak"
+Ukku-tarana: "Ukku-tarana"
+Ulam-kassu: "Ulam-kassu"
+Uldin: "Uldin"
+Ultzinzures: "Ultzinzures"
+Unibel: "Unibel"
+Untash-nahhunte: "Untash-nahhunte"
+Urceti: "Urceti"
+Utheri: "Utheri"
+Utherian: "Utherian"
+Utigur: "Utigur"
+Uza-sali: "Uza-sali"
+Uzibi-nanai: "Uzibi-nanai"
+Uzunnu-buriash: "Uzunnu-buriash"
+Walxon: "Walxon"
+Xailandur: "Xailandur"
+Xionite: "Xionite"
+Yabghu: "Yabghu"
+Yabgu: "Yabgu"
+Zunakshumti-nisaa: "Zunakshumti-nisaa"
+Zunkir-Nappipir-nisaa: "Zunkir-Nappipir-nisaa"
