--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -709,6 +709,7 @@ l_english:
  okinawa_make_an_offer_tt:0 "Make an offer to purchase #Y [GetProvince('(int32)9740').GetName]#!"
  okinawa_sado_tt:0 "Any country owns #Y [GetProvince('(int32)10555').GetName]#!"
  duuchuu_yoink_tt:0 "Our #E Navy#! has #Y 30#! or more ships and has a #E Commander#!."
+ duuchuu_yoink_tt_2:0 "Our #E Navy#! has #Y 40#! or more ships and has a #E Commander#!."
  okinawa_disaster_tt:0 "#R If what the #Y Nuruu#! says is true, we will experience the following:#!"
  yuta_1_tt:0 "We will hear the proposal of the #Y Yuta Spirit-Medium#!."
  decide_matsura_tt:0 "We will decide what to do with the area of #Y Matsura#!."
@@ -719,6 +720,9 @@ l_english:
  kumaso_decision_tt:0 "We will decide if the #Y Nansei#! culture is worth recognizing."
  alliance_jomon_tt:0 "Has an #E alliance#! with any #Y Jomon#! culture country."
  send_request_tt:0 "We will send a request to #Y Vassalize#! our ally."
+ threaten_tamna:0 "We will send a threat promising horrible things to the owner of #E Tamna#!."
+ okinawa_war_tt:0 "The #E Liukiu#! may #R declare war#!."
+ 7_martial_admiral_needed_tt:0 "Our #Y Admiral#! has at least #G 7#! @military_icon!"
  
  #Modifiers
  okinawa_calm:0 "Calm Before the Storm"
@@ -856,28 +860,35 @@ l_english:
  me_duuchuu_16.a:0 "Finally! That was scary..."
  me_duuchuu_16_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_16$#!' has now been #G Completed#!!"
  
- me_duuchuu_17_title:0 "$jomon_duuchuu_missions_task_17$"
- me_duuchuu_17_desc:0 "Due to our influence growing from the island of #E Tsushima#!, we are able to send colonists all the way to #E Sado#!. We claim this island in the name of expansion into the #E Japanese Sea#!. Surely this allows our influence to be spread as far as we could possibly want it to go... at least in the north!"
- me_duuchuu_170_desc:0 "Unfortunately, the island of #E Sado#! is already owned by the natives... however, we are prepared to pay a hefty sum in return for the island. The locals are sure to accept it."
- me_duuchuu_17.a:0 "An excellent waypoint!"
- me_duuchuu_17.b:0 "An excellent waypoint!"
- me_duuchuu_17.c:0 "Forget it."
- me_duuchuu_17_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_17$#!' has now been #G Completed#!!"
+ me_duuchuu_19_title:0 "$jomon_duuchuu_missions_task_19$"
+ me_duuchuu_19_desc:0 "Due to our influence growing from the island of #E Tsushima#!, we are able to send colonists all the way to #E Sado#!. We claim this island in the name of expansion into the #E Japanese Sea#!. Surely this allows our influence to be spread as far as we could possibly want it to go... at least in the north!"
+ me_duuchuu_190_desc:0 "Unfortunately, the island of #E Sado#! is already owned by the natives... however, we are prepared to pay a hefty sum in return for the island. The locals are sure to accept it."
+ me_duuchuu_19.a:0 "An excellent waypoint!"
+ me_duuchuu_19.b:0 "An excellent waypoint!"
+ me_duuchuu_19.c:0 "Forget it."
+ me_duuchuu_19_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_19$#!' has now been #G Completed#!!"
  
  me_duuchuu_18_title:0 "$jomon_duuchuu_missions_task_18$"
- me_duuchuu_18_desc:0 "he island of #E Oki#! is also positioned in the center of the #E Sea of Japan#!, making it useful island to have in order to project power across this northern sea. We also have the option of transforming it into a city, if we so wish to do so."
+ me_duuchuu_18_desc:0 "The island of #E Oki#! is also positioned in the center of the #E Sea of Japan#!, making it useful island to have in order to project power across this northern sea. We also have the option of transforming it into a city, if we so wish to do so."
  me_duuchuu_18.a:0 "Let's make it a city!"
  me_duuchuu_18.b:0 "Okidoki, it'll be simply a port."
  me_duuchuu_18_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_18$#!' has now been #G Completed#!!"
  
- me_duuchuu_19_title:0 "$jomon_duuchuu_missions_task_19$"
- me_duuchuu_19_desc:0 ""
- me_duuchuu_19.a:0 ""
- me_duuchuu_19_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_19$#!' has now been #G Completed#!!"
+ me_duuchuu_17_title:0 "$jomon_duuchuu_missions_task_17$"
+ me_duuchuu_17_desc:0 "The people in #E Tamna#! may be willing to submit to us. All we need to do is terrify them! We will send them an envoy with a #E Yuta#! woman. She will read a revelation that shows them their doom if they do not submit."
+ me_duuchuu_17.a:0 "Hah, let's see them scream!"
+ me_duuchuu_170_desc:0 "The #E Ryukyuans#! have threatened the security of #E Tamna#!! They sent an envoy called a #E 'Yuta'#! who scarily read a message telling us of our doom... what do we do?!"
+ me_duuchuu_170.a:0 "There's nothing we can do."
+ me_duuchuu_170.b:0 "Surely they won't actually declare war."
+ me_duuchuu_171_desc:0 "They refused to give us #E Tamna#! even though they did seem scared according to our #E Yuta#!. We must now decide the next move. Shall we make good on our threat, or do we back down and come back another time?"
+ me_duuchuu_171.a:0 "We must declare war!"
+ me_duuchuu_171.b:0 "We will come back later..."
+ me_duuchuu_17_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_17$#!' has now been #G Completed#!!"
  
  me_duuchuu_20_title:0 "$jomon_duuchuu_missions_task_20$"
- me_duuchuu_20_desc:0 ""
- me_duuchuu_20.a:0 ""
+ me_duuchuu_20_desc:0 "Our distant cousins in the north, the #E Epi-Jomon#! have been apart from us for thousands of years at this point. We now reunite with an offer the cannot confuse. They will be granted the gift of civilization, in exchange for accepting our gods... and perhaps becoming our subjects."
+ me_duuchuu_20.a:0 "Make them convert to #E Unaric#!."
+ me_duuchuu_20.b:0 "Ask them to become our vassal."
  me_duuchuu_20_tooltip:0 "The mission task '#Y $jomon_duuchuu_missions_task_20$#!' has now been #G Completed#!!"
  
  me_duuchuu_21_title:0 "$jomon_duuchuu_missions_task_21$"
